<resources>
    <string name="app_name">KanB</string>
    <string name="standard_erro_message">An application error has occurred</string>
    <string name="standard_no_internet_error">You must have internet to use the application.</string>
    <string name="connection_error_message">Unable to connect to Kanboard, please try again later</string>
    <string name="menu_projects">My Projects</string>
    <string name="menu_tasks">My Tasks</string>
    <string name="menu_perfil">My Profile</string>
    <string name="profile_resume">Summary</string>
    <string name="profile_user">Login:</string>
    <string name="profile_name">Full Name:</string>
    <string name="task_assignee">Assignee</string>
    <string name="task_category">Category</string>
    <string name="task_priority">Priority</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="task_button_color">Color</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="task_new">New Task</string>
    <string name="button_save">Save</string>
    <string name="task_date_start">Start Date</string>
    <string name="task_date_due">Due Date</string>
    <string name="task_estimate_hours">Original estimate</string>
    <string name="task_time_spent">Time Spent</string>
    <string name="task_complexity">Complexity</string>
    <string name="task_reference">Reference</string>
    <string name="projec_view_title">New Project</string>
    <string name="project_name">Name</string>
    <string name="project_identify">Identifier</string>
    <string name="project_description">Description</string>
    <string name="splash_text">KanB</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_token">Kanboard Token</string>
    <string name="action_sign_in">Sign in and Save</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kanboard_server">"Kanban Url service (Kanboard)"</string>
    <string name="icon_owner">Owner</string>
    <string name="lock_content_description">a padlock</string>
    <string name="profile_email">Email:</string>
    <string name="profile_status">Status:</string>
    <string name="profile_securiity">Security</string>
    <string name="profile_role">Role:</string>
    <string name="profile_account_type">Account type:</string>
    <string name="profile_number_failed_login">Number of failed login:</string>
    <string name="profile_preferences">Preferences</string>
    <string name="profile_timezone">Timezone:</string>
    <string name="profile_language">Language:</string>
    <string name="profile_custom_filter">Custom Filter:</string>
    <string name="profile_notifications">Notifications:</string>
    <string name="profile_two_factor_authentication_disabled">Two factor authentication disabled</string>
    <string name="profile_two_factor_authentication_enabled">Two factor authentication enabled</string>
    <string name="profile_accout_type_remote">Remote</string>
    <string name="profile_accout_type_local">Local</string>
    <string name="profile_notifications_enabled">Enabled</string>
    <string name="profile_notifications_disabled">Disabled</string>
    <string name="profile_aplication_dafult">Application default</string>
    <string name="profile_app_role_admin">Administrator</string>
    <string name="profile_app_role_manager">Manager</string>
    <string name="profile_app_role_user">User</string>
    <string name="profile_status_active">Active</string>
    <string name="profile_status_inactive">Inactive</string>
    <string name="profile_none">None</string>
    <string name="task_assignee_person">Assignee:</string>
    <string name="task_creator">Creator:</string>
    <string name="task_swimlane">Swimlane:</string>
    <string name="task_column">Column:</string>
    <string name="task_position">Position:</string>
    <string name="task_date_init">Started:</string>
    <string name="task_date_created">Created:</string>
    <string name="task_date_modified">Modified:</string>
    <string name="task_date_moved">Moved:</string>
    <string name="task_opt_finalize">Finalize</string>
    <string name="task_opt_edit">Edit</string>
    <string name="task_message_finalize">Do you really want to finish this task?</string>
    <string name="save_config_confirm">Kanboard access settings saved</string>
    <string name="config_form_fill">You must complete the entire configuration form</string>
    <string name="no_certificate">The Kanboard you are trying to access does not have a certificate installed on your
     device, if you trust this site, click Ok. You can also search for site support to help you to install
     the certificate chain on your device</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
